src/components/form.module.css
.contactContainer {
    align-items: center;
    align-self: center;
    border-radius: 20px;
    display: flex;
    height: fit-content;
    justify-content: center;
    pointer-events: auto;
    width: calc(100% - 72px);
    max-width: 692px;
    margin: 48px auto;

    @media (max-width: 768px) {
        height: 70%;
        padding-bottom: 5em;
        width: calc(100% - 48px);
        max-width: 100%;
        margin-top: 1rem;
    }

    @media (max-width: 400px) {
        margin-top: 3rem;
    }

    @media (max-width: 375px) {
        margin-top: 7rem;
    }
}

.contactForm {
    display: grid;
    gap: 2.5em;
    grid-template-rows: auto;
    justify-items: center;
    width: 100%;
}

.inputContainer {
    position: relative;
    width: 100%;
}

input,
textarea {
    border: none;
    border-radius: 5px;
    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
    font-size: 1em;
    padding: 0.5em;
    width: 100%;
}

input {
    height: 3em;
}

textarea {
    font-family: inherit;
    height: 10em;
}

input:focus,
input:valid,
textarea:focus,
textarea:valid {
    outline: 2px solid rgb(59, 232, 142);
}

input[name='email'][value]:not([value='']):invalid,
input[name='email'][value='']:invalid:focus {
    outline: 2px solid rgb(255, 0, 0);
}

label {
    font-family: Roboto, 'Helvetica Neue', sans-serif;
    align-items: center;
    display: flex;
    font-size: 1em;
    height: 3em;
    left: 0.5em;
    pointer-events: none;
    position: absolute;
    top: 0;
    transition: 0.3s ease all;
    width: 100%;
}

input:focus~label,
input:valid~label,
input[value]:not([value=''])~label,
textarea:focus~label,
textarea:valid~label {
    color: #080808;
    font-size: 0.9em;
    font-weight: 600;
    top: -2.75em;
}

input[name='email'][value]:not([value='']):invalid~label {
    color: rgb(255, 0, 0);
}

button.submit {
    align-self: center;
    background-color: rgb(59, 232, 142);
    border: none;
    border-radius: 50px;
    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
    color: #565656;
    font-size: 1.5em;
    font-weight: 400;
    padding: 0.5em 1em;
    text-transform: uppercase;
    transition: 0.3s ease all;
    width: max-content;
    position: relative;
    overflow: hidden;
}

button.submit:hover {
    background-color: rgb(59, 232, 142, 0.7);
}

button.submit:after {
    content: '';
    position: absolute;
    top: -50%;
    right: -50%;
    bottom: -50%;
    left: -50%;
    background: linear-gradient(to bottom, rgba(229, 172, 142, 0), rgba(255, 255, 255, 0.5) 50%, rgba(229, 172, 142, 0));
    transform: rotateZ(60deg) translate(-5em, 7.5em);
}

button.submit:hover::after,
button.submit:focus::after {
    animation: shine 1s forwards;
}

@keyframes shine {
    100% {
        transform: rotateZ(75deg) translate(1em, -9em);
    }
}

p.successMessage {
    color: #f5f5f5;
    font-size: 1.5em;
}

